k8s/client-cluster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-service
spec:
  selector:
    component: web
  ports:
  - port: 3000
    targetPort: 3000
