k8s/server-cluster-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: server-cluster-service
spec:
  selector:
    component: server
  ports:
  - port: 5000
    targetPort: 5000
