k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress



# piVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: myingress
#   labels:
#     name: myingress
# spec:
#   rules:
#   - host: <Host>
#     http:
#       paths:
#       - pathType: Prefix
#         path: "/"
#         backend:
#           service:
#             name: <Service>
#             port: 
#               number: <Port>
